# scode

./: .gitignore  Cargo.toml  LICENSE  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test  tsconfig.json
crates/cli/: Cargo.toml
crates/core/: Cargo.toml  package.json
crates/language/: Cargo.toml
crates/lint/: Cargo.toml
crates/merge/: Cargo.toml
crates/plugin/: Cargo.toml
crates/scode_lsp/: Cargo.toml
crates/state/: Cargo.toml  LICENSE_MIT  package.json
crates/state/src/: change.rs  char.rs  char_category.rs  column.rs  constant.rs  facet.rs  lib.rs  main.rs  rangeset.rs  selection.rs  state.rs  text.rs  transaction.rs
crates/state/tests/: cluster.rs
